# linkerd-failover

./: Cargo.toml  Dockerfile  README.md
example/: demo.sh  emojivoto.yml
src/: main.rs
src/templates/: manifests.yml
