[package]
name = "linkerd-failover"
version = "0.9.0"
authors = ["Alejandro Pedraza <alejandro@buoyant.io>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
futures = "0.3.8"
handlebars = "3"
hyper = { version = "0.14", features = ["full"] }
kube = { version = "0.52.0", features = ["derive"] }
kube-runtime = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
log = "0.4.11"
regex = "1"
schemars = "0.8.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.61"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
